ak1pro/apps/staging/sonarr/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-prod
  namespace: prod
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: https
  hostnames:
    - "sonarr.ak1pro.n1l.ro"
    - "sonarr-prod.ak1pro.n1l.ro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 80
